# amanda-menza.github.io

./: README.md
 APTs: Java/: HuffmanDecoding.java  TreeTighten.java
Algorithmic Problem-solving Testing problems (APTs) /: FriendScore.java  OlympicCandles.java
Computer Architecture/: HoopsRank.c  HoopsRank.s  cachesim.java  recurse.c  recurse.s
Computer Architecture: Assembly & C/: by5or6.c  by5or6.s
ECE Fundamentals/: IDCBoeBot.ino
ECE Fundamentals: C++/: IDCBoeBot.ino
IoT_FeedWise/: README.md
IoT_FeedWise/esp32_code/: CMakeLists.txt  sdkconfig  sdkconfig.old
IoT_FeedWise/esp32_code/main/: CMakeLists.txt  idf_component.yml  main.c
IoT_FeedWise/flutter_application/: pubspec.yaml
IoT_FeedWise/flutter_application/ios/Runner/: Info.plist
IoT_FeedWise/flutter_application/ios/Runner.xcodeproj/: project.pbxproj
IoT_FeedWise/flutter_application/lib/: main.dart
IoT_FeedWise/flutter_application/lib/charts/: bar_chart.dart  line_chart.dart
IoT_FeedWise/flutter_application/lib/models/: SettingsModel.dart  detection_data.dart  weight_data.dart
IoT_FeedWise/flutter_application/lib/pages/: data_page.dart  home_page.dart  main_page.dart  settings_page.dart
